<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:padding="16dp"
    tools:context=".authapp.ProfileActivity">

    <TextView
        android:id="@+id/createprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Create Profile!"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imgView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/defavatar" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="150dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnChoose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Choose new profile picture" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Upload New Profile Picture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp">

        <TextView
            android:id="@+id/TextViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:hint="Ex. Hunter Green"/>

        <TextView
            android:id="@+id/TextViewPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/EditTextPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ex. 1234567890"
            android:inputType="number"/>

        <TextView
            android:id="@+id/TextViewGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/EditTextGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:hint="Ex. Male, Female or Non Binary"/>

        <TextView
            android:id="@+id/TextViewBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Birthday in mmddyyyy"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/EditTextBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="Ex. 09232000"/>

        <TextView
            android:id="@+id/TextViewWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weight in pounds"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/EditTextWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ex 120"
            android:inputType="number"/>

        <TextView
            android:id="@+id/TextViewHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Height in inches"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/EditTextHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ex. 66"
            android:inputType="number"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save Profile"
            android:id="@+id/btnSave"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</RelativeLayout>
