...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/editprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_horizontal"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/TextViewUsername"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:text="Username:"
                    android:textSize="20dp"
                    android:paddingLeft="16dp"
                    android:textColor="@color/colorPrimaryDark"/>
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Change Password"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/btnlogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Logout"
                    android:textSize="11sp" />

...
